version of Maps. You can find the most up-do-date version at
http://mapping.referata.com/wiki/Maps/Version_history#Maps_change_log


=== Maps 0.7.1 ===
(2010-1x-xx)

==== New features ====

* Image layers for OpenLayers maps, defined via pages in the Layer namespace.

==== Bug fixes ====

* Support for images without namespace prefix in the display points parser hook.

=== Maps 0.7 ===
(2010-10-15)

==== New features ====

* Tag support for these parser hooks (which previously only had parser function support):
** Coordinates
** Distance
** Finddestination
** Geocode
** Geodistance

* Thumbs and photos parameters for the OSM service.

==== Bug fixes ====

* Fixed compatibility with the MW 1.17 resource loader.

* Fixed i18n issue with the overlays control for Google Maps v2 maps.

* Fixed default zoom level for Yahoo! Maps maps.

* Increased the maximum decimals for DMS coordinates from 2 to 20.

==== Removed features ====

* #geocodelong and #geocodelat parser functions - you can obtain their functionality using #geocode.

==== Internal improvements ====

* Rewrote the geocoding functionality. It's now an integral part of the extension that can not be just pulled out,
while the reverse is true for individual geocoders. Geocoder interaction now uses the same model as mapping
service interaction.
  
* Use of Validator 0.4, allowing for more robust and consistent error reporting.

* Rewrote the parser hooks to use the ParserHook class provided by Validator.

* Restructured the directory structure of the extension to better match it's architecture.

* Use of OpenLayers 2.10 instead of 2.9.

=== Maps 0.6.6 ===
(2010-08-26)

==== New features ====

* Support for geocoding over proxies.

* Added $egMapsInternatDirectionLabels settings, allowing users to disable internationalization of direction labels.

==== Refactoring ====

* Added MapsMappingServices, which serves as factory for MapsPappingService objects and does away with all the globals previously needed for this.
